@@ -8,6 +8,7 @@
 * Upped the minimum WordPress requirement to 5.0.
 * Added the translation template for the plugin's translatable strings.
 * Code formatting corrections.
+* Updated the settings screen.
 
 = 1.1.0 =
 * WordPress 5.2 compatible.
